# learn_lambda_docker

./: Dockerfile  pyproject.toml  readme.md
.github/workflows/: cd.yml
src/: csv_redshift_etl.py
terraform/: ecr.tf  events.tf  lambda.tf  main.tf  outputs.tf  plan.out  s3.tf  variables.tf
terraform/envs/: dev.tfvars
