[tool.poetry]
name = "learn-lambda"
version = "0.1.0"
description = "Learn AWS Lambda and EventBridge with Terraform, generative AI"
authors = ["Wong Jiang Fung <kakarukeys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.11"
redshift-connector = "^2.0.918"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
